--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,8 @@ webArtemisGitUri=https://github.com/sanger-pathogens/Web-Artemis.git
 webArtemisGitBranch=master
 webArtemisInitialChromosome=Pf3D7_01
 
+prompt_for_custom_installs = true
+
 # we need to set this for jettyRunWar to be able to communicate with the standalone hazelcast service wrapper
 # (the systemProp. prefix makes this a system property (-D) instead of gradle property (-P))
 systemProp.java.net.preferIPv4Stack=true
