restore the alignments property to all three pipeline output files

--- a/resource-elasticsearch-vrtrack.properties
+++ b/resource-elasticsearch-vrtrack.properties
@@ -1,8 +1,8 @@
 deploy.dir=/nfs/pathdb/genedb/services-test/webapps
 deploy.name=vrtrack
 
-#/lustre/scratch103/pathogen/pathpipe/prokaryotes/alignments.json,
-alignments=/lustre/scratch103/pathogen/pathpipe/helminths/alignments.json,/lustre/scratch103/pathogen/pathpipe/eukaryotes/alignments.json
+
+alignments=/lustre/scratch103/pathogen/pathpipe/prokaryotes/alignments.json,/lustre/scratch103/pathogen/pathpipe/helminths/alignments.json,/lustre/scratch103/pathogen/pathpipe/eukaryotes/alignments.json
 showParameters=true
 
 resource.type=elasticsearch-remote
