--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,5 @@ prompt_for_custom_installs = true
 # we need to set this for jettyRunWar to be able to communicate with the standalone hazelcast service wrapper
 # (the systemProp. prefix makes this a system property (-D) instead of gradle property (-P))
 systemProp.java.net.preferIPv4Stack=true
+systemProp.http.proxyHost=webcache.sanger.ac.uk
+systemProp.http.proxyPort=3128
