--- a/resource-chado-public.properties
+++ b/resource-chado-public.properties
@@ -1,17 +1,14 @@
 deploy.dir=/nfs/pathdb/genedb/services/webapps
 deploy.name=services
 
-alignments=/lustre/scratch103/pathogen/pathpipe/helminths/alignments.json
+alignments=/nfs/pathdb/genedb/services/alignment.json
+#alignments=/lustre/scratch108/pathogen/pathpipe/helminths/alignments.json
 showParameters=false
 
 resource.type=chado-postgres
 
-dbhost=db.genedb.org
-dbport=5432
+dbhost=vm-pg-path-genedb
+dbport=5444
 dbname=snapshot
 dbuser=genedb_ro
-dbpassword=genedb_ro
-
-
-
-
+dbpassword=xxxxxx_insert_password_here_xxxxxxxx
